# runner-template-python3

./: README.md
template/: template.yml
template/action-store-template-python3-11/: Dockerfile  index.py  pyproject.toml  template.yml
template/action-store-template-python3-11/function/: pyproject.toml
template/action-store-template-python3-11/function/action_store/actions/: examples.py
template/action-store-template-python3-11/function/handler/: handler.py
template/action-store-template-python3-11/function/handler/server/: api.py  model.py
template/action-store-template-python3-11/server/: api.py  handler.py  model.py
template/function/: main_store.py
template/runner-template-python3/: Dockerfile  index.py
template/runner-template-python3/function/: main_store.py
template/runner-template-python3/function/actions/: __init__.py  examples.py
